# TRA

./: .gitignore  CMakeLists.txt  README.md  config.json  docker-compose-only-single.yml  docker-compose.yml  dockerfile  dockerfile.device  dockerfile.node  dockerfile.reporter
include/: config.hpp  cpu.hpp  db.hpp  filter.hpp  gtpu_identifier.hpp  ip_util.hpp  pfcp.hpp  postman.hpp  protocol.h  protocol.hpp  sniffer.hpp  traffic_data.hpp  traffic_stat.hpp
node/src/: config.cpp  db.cpp  main.cpp
reporter/src/: main.cpp  reporter_socket.hpp  status_pfcp.hpp
src/: config.cpp  db.cpp  main.cpp
